# openvslam

./: .gitmodules  CMakeLists.txt
cmake/: FindYaml-cpp.cmake
example/: CMakeLists.txt  run_video_slam.cc
example/util/: video_evaluation.cc  video_evaluation.h
src/openvslam/: CMakeLists.txt  config.cc  config.h  config_settings.cc  config_settings.h  global_optimization_module.cc  global_optimization_module.h  mapping_module.cc  mapping_module.h  system.cc  tracking_module.cc  type.h
src/openvslam/camera/: base.cc  base.h  equirectangular.cc  equirectangular.h  fisheye.cc  fisheye.h  perspective.cc  perspective.h  radial_division.cc  radial_division.h
src/openvslam/data/: graph_node.cc  graph_node.h  landmark.h
src/openvslam/feature/: orb_params.cc  orb_params.h
src/openvslam/match/: fuse.cc  robust.cc  robust.h
src/openvslam/module/: frame_tracker.cc  frame_tracker.h  initializer.cc  initializer.h  keyframe_inserter.cc  keyframe_inserter.h  local_map_updater.h  loop_detector.cc  loop_detector.h  relocalizer.cc  relocalizer.h
src/openvslam/optimize/: global_bundle_adjuster.cc
src/openvslam/util/: stereo_rectifier.cc  stereo_rectifier.h
src/pangolin_viewer/: CMakeLists.txt  color_scheme.h  exports.h  viewer.cc  viewer.h
src/stella_vslam/: CMakeLists.txt  config.cc  config.h  config_settings.cc  config_settings.h  exports.h  global_optimization_module.cc  global_optimization_module.h  mapping_module.cc  mapping_module.h  metrics.cc  metrics.h  solver.cc  solver.h  system.cc  system.h  tracking_module.cc  tracking_module.h  type.h
src/stella_vslam/camera/: base.cc  base.h  camera_factory.h  equirectangular.cc  equirectangular.h  fisheye.cc  fisheye.h  perspective.cc  perspective.h  radial_division.cc  radial_division.h
src/stella_vslam/data/: CMakeLists.txt  bfx_keyframe_autocalibration_wrapper.cc  bfx_keyframe_autocalibration_wrapper.h  bfx_shared_camera_intrinsics.cc  bfx_shared_camera_intrinsics.h  bow_database.cc  camera_database.cc  camera_database.h  common.h  frame.cc  frame.h  frame_observation.h  frame_statistics.h  graph_node.cc  graph_node.h  keyframe.cc  keyframe.h  keyframe_autocalibration_wrapper.cc  keyframe_autocalibration_wrapper.h  landmark.cc  landmark.h  map_camera_helpers.cc  map_camera_helpers.h  map_database.cc  map_database.h  marker.h  orb_params_database.cc
src/stella_vslam/feature/: CMakeLists.txt  orb_extractor.cc  orb_extractor.h  orb_impl.cc  orb_params.cc  orb_params.h  orb_preanalysis.cc  orb_preanalysis.h
src/stella_vslam/initialize/: base.cc  base.h  bearing_vector.cc  bearing_vector.h  perspective.cc  perspective.h
src/stella_vslam/io/: map_database_io_base.h  map_database_io_factory.h  map_database_io_msgpack.cc  map_database_io_msgpack.h  map_database_io_sqlite3.cc  map_database_io_sqlite3.h
src/stella_vslam/marker_model/: aruco.h  base.h
src/stella_vslam/match/: CMakeLists.txt  area.cc  bow_tree.cc  fuse.cc  prematched.cc  prematched.h  projection.cc  projection.h  robust.cc  robust.h
src/stella_vslam/module/: CMakeLists.txt  frame_track_repositioning.cc  frame_track_repositioning.h  frame_tracker.cc  frame_tracker.h  initializer.cc  initializer.h  keyframe_inserter.cc  keyframe_inserter.h  local_map_cleaner.cc  local_map_cleaner.h  local_map_updater.h  loop_bundle_adjuster.cc  loop_bundle_adjuster.h  loop_detector.cc  loop_detector.h  map_selector.cc  map_selector.h  relocalizer.cc  relocalizer.h
src/stella_vslam/optimize/: global_bundle_adjuster.cc  global_bundle_adjuster.h  graph_optimizer.cc  local_bundle_adjuster.cc  local_bundle_adjuster.h  local_bundle_adjuster_factory.h  local_bundle_adjuster_g2o.cc  local_bundle_adjuster_g2o.h  pose_optimizer_factory.h
src/stella_vslam/publish/: frame_publisher.h  map_publisher.h
src/stella_vslam/report/: CMakeLists.txt  debug_printer.cc  debug_printer.h  initialisation_debugging.cc  initialisation_debugging.h  metrics.cc  metrics.h  plot_html.cc  plot_html.h  video_evaluation.cc
src/stella_vslam/solve/: CMakeLists.txt  fundamental_consistency.cc  fundamental_consistency.h  fundamental_to_focal_length.cc  fundamental_to_focal_length.h
src/stella_vslam/util/: CMakeLists.txt  bfx_video_evaluation.cc  bfx_video_evaluation.h  (+6 more)
test/: CMakeLists.txt
test/bfx/: determinismClips.json  determinismTest.py  readme.txt
(+15 files in other folders)
